# h2gis

./: .coverage  .env.template  .gitignore  404.html  CLAUDE.md  CONTRIBUTORS.md  LICENSE.txt  README.md  config.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: release.yml
api/: index.html
api/compiler/: index.html
api/downloader/: index.html
api/extractor/: index.html
api/parquet2csv/: index.html
api/parquet_indexer/: index.html
api/parquet_plotter/: index.html
api/zarr_catalog/: index.html
architecture/: index.html
cli/: index.html
configuration/: index.html
docs/: architecture.md  cli.md  configuration.md  index.md  installation.md  variables.md
docs/api/: compiler.md  downloader.md  extractor.md  index.md  parquet2csv.md  zarr_catalog.md  (+2 more)
h2gis/: __init__.py  config.py  pipeline_manager.py  types.py  validators.py
h2mare/: __init__.py  config.py  models.py  pipeline_manager.py  types.py  validators.py
installation/: index.html
scripts/: bathymetry.py  ekman-climatological.py  ekman_climatology.py  ekman_derived_vars.py  extract_longline_data.py
search/: search_index.json
tests/: conftest.py  test_aviso_downloader.py  test_coverage_utils.py  test_datetime_utils.py  test_extractor.py  test_labels.py  test_logging_utils.py  test_models.py  test_parquet2csv.py  test_parquet_helpers.py  test_parquet_indexer.py  test_pipeline_manager.py  test_plot.py  test_spatial.py  test_storage.py  test_types.py  test_utils_paths.py  test_validators.py  test_xarray_helpers.py  test_zarr_catalog.py
variables/: index.html
(+71 files in other folders)
